style: fix z-index from benefits

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -145,6 +145,7 @@
   background-color: var(--accent-clr);
   padding: 0.5rem;
   border-radius: 50%;
+  z-index: 999;
 }
 
 .benefitsGroupText {
